syntax = "proto3";

package proto;

service BlockChain {
    rpc AddBlock(AddBlockRequest)returns (AddBlockResponse){}
    rpc GetBlock(GetBlockRequest)returns (GetBlockResponse){}
}

message AddBlockRequest{
    string data = 1;
}

message AddBlockResponse{
    string hash = 1;
}

message Block{
    string prveBlockHash = 1;
    string data = 2;
    string hash =3;
}

message GetBlockRequest {}

message GetBlockResponse{
    string blocklist = 1;
}

